[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "twit-cleaner"
version = "0.1.3"
description = "Browser-driven X/Twitter post cleanup command-line tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hugo Souza" }]
dependencies = ["playwright>=1.45.0"]
keywords = ["twitter", "x", "cleanup", "playwright", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/dezugin/twit_cleaner"
Repository = "https://github.com/dezugin/twit_cleaner"
Issues = "https://github.com/dezugin/twit_cleaner/issues"

[project.scripts]
twit-cleaner = "twit_cleaner.app:main"

[tool.setuptools.packages.find]
include = ["twit_cleaner*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
twit_cleaner = ["keyword_profiles.json"]
